// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #fff;
  background-color: #5f6c85;
  border: none;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #78859f;
  border: none;
  box-shadow: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-5 {
  font-weight: 400;
}

.emotion-5 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-7 path {
  fill: #fff;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              Async Label
              :
              <span>
                Default value
              </span>
            </span>
          </span>
          <span
            className="emotion-6"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #fff;
  background-color: #5f6c85;
  border: none;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #78859f;
  border: none;
  box-shadow: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-5 {
  font-weight: 400;
}

.emotion-5 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-7 path {
  fill: #fff;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              Async Label
              :
              <span>
                Default value
              </span>
            </span>
          </span>
          <span
            className="emotion-6"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #f3f5f8;
  border: none;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #d3dae5;
  border: none;
  box-shadow: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-5 {
  font-weight: 400;
}

.emotion-5 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-7 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                you can change me
                :
                <span>
                  Peach
                </span>
              </span>
            </span>
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #f3eaff;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #d6b7ff;
  border: none;
  box-shadow: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

.emotion-10 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #FF1744;
  border: solid 1px #5f6c85;
}

.emotion-10:hover,
.emotion-10:active {
  background-color: #e3002c;
  border: solid 1px #e3002c;
  box-shadow: none;
}

.emotion-17 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
  color: #000;
  background-color: #848494;
  border: none;
}

.emotion-17:hover,
.emotion-17:active {
  background-color: #6b6b7a;
  border: none;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
}

.emotion-24 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: transparent;
  border: none;
}

.emotion-24:hover,
.emotion-24:active {
  background-color: #eaa4ee;
  border: none;
  box-shadow: none;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-10"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-17"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-24"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with style types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #f3f5f8;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #d3dae5;
  border: none;
  box-shadow: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

.emotion-10 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #f3f5f8;
  border: solid 1px #5f6c85;
}

.emotion-10:hover,
.emotion-10:active {
  background-color: #d3dae5;
  border: solid 1px #d3dae5;
  box-shadow: none;
}

.emotion-17 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
  color: #000;
  background-color: #f3f5f8;
  border: none;
}

.emotion-17:hover,
.emotion-17:active {
  background-color: #d3dae5;
  border: none;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
}

.emotion-24 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: transparent;
  border: none;
}

.emotion-24:hover,
.emotion-24:active {
  background-color: #d3dae5;
  border: none;
  box-shadow: none;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-10"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-17"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-24"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #f3f5f8;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #d3dae5;
  border: none;
  box-shadow: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
